Fix modal z-index positioning - modals now appear above floating cart

--- a/styles/03-components/footer.css
+++ b/styles/03-components/footer.css
@@ -319,7 +319,7 @@
 .modal {
   display: none;
   position: fixed;
-  z-index: 2000;
+  z-index: 10000;
   left: 0;
   top: 0;
   width: 100%;
@@ -409,7 +409,7 @@
 .modal-overlay {
   display: none;
   position: fixed;
-  z-index: 2000;
+  z-index: 10000;
   left: 0;
   top: 0;
   width: 100%;
